<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        style="@style/matchWrap"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/detailAc_member_photo"
            style="@style/matchWrap"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/member_photo_desc" />

        <TextView
            android:id="@+id/detailAc_member_detail"
            style="@style/matchWrap"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:lineSpacingMultiplier="1.2"
            android:textSize="17sp"
            tools:text="@string/lorem_dummy" />

        <TableLayout
            style="@style/matchWrap"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
<!--            Name -->
            <TableRow
                style="@style/matchWrap.TableRow">

                <TextView
                    style="@style/matchWrap.TextView_table"
                    android:layout_marginEnd="16dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="@string/name_table"/>

                <TextView
                    android:id="@+id/detailAc_member_name"
                    style="@style/matchWrap.TextView_table"
                    android:layout_marginEnd="16dp"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/full_names"/>

            </TableRow>

<!--            Birthdate -->
            <TableRow
                style="@style/matchWrap.TableRow">

                <TextView
                    style="@style/matchWrap.TextView_table"
                    android:textStyle="bold"
                    android:text="@string/tanggal_lahir_table"/>

                <TextView
                    android:id="@+id/detailAc_member_birthdate"
                    style="@style/matchWrap.TextView_table"
                    android:layout_weight="1"
                    tools:text="@tools:sample/date/ddmmyy"/>
            </TableRow>

<!--            Position -->
            <TableRow
                style="@style/matchWrap.TableRow">

                <TextView
                    style="@style/matchWrap.TextView_table"
                    android:textStyle="bold"
                    android:text="@string/position_table"/>

                <TextView
                    android:id="@+id/detailAc_member_position"
                    style="@style/matchWrap.TextView_table"
                    android:layout_weight="1"
                    tools:text="Leader, Lead Dancer, Visual, Main Vocalist"/>
            </TableRow>
<!--            PD48 Rank-->
            <TableRow
                style="@style/matchWrap.TableRow">

                <TextView
                    style="@style/matchWrap.TextView_table"
                    android:textStyle="bold"
                    android:text="@string/pd48_final_rank"/>

                <TextView
                    android:id="@+id/detailAc_member_pd48rank"
                    style="@style/matchWrap.TextView_table"
                    android:layout_weight="1"
                    tools:text="0"/>


            </TableRow>

<!--            Instagram -->
            <TableRow
                style="@style/matchWrap.TableRow">

                <TextView
                    style="@style/matchWrap.TextView_table"
                    android:textStyle="bold"
                    android:text="@string/instagram_table"/>

                <Button
                    android:id="@+id/detailAc_member_instagram"
                    style="@style/matchWrap"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    tools:text="\@user"/>
            </TableRow>

        </TableLayout>



    </LinearLayout>


</ScrollView>