<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/about_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/about_profile_pict"/>

    <TextView
        android:id="@+id/about_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:text="@string/about_name"/>

    <TextView
        android:id="@+id/about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/about_email"/>

    <Button
        android:id="@+id/dicoding_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/dicoding"/>



</LinearLayout>